--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,8 @@ Prioridades: 1 -> pouca .... 5 -> muita
 não sabemos como referenciar de onde fomos buscar as imagens q usamos (Ex fig 3.7 da wikipedia)
 onde eq se fala do main.py
 
+Como eq se centra algumas imagens
+
 Open-CV package
 https://docs.opencv.org/3.4/d6/d00/tutorial_py_root.html
 
