--- a/TODO.txt
+++ b/TODO.txt
@@ -82,3 +82,19 @@ adb:
 ------------------------------------ VERIFICAR TODOS OS TODOS -------------------------------------
 
 
+
+
+
+------------------------------------ TESTES: -------------------------------------
+
+Random:
+    250:
+    700:
+    1200:
+    1800:
+
+MinMax:
+    250:
+    700:
+    1200:
+    1800:
