--- a/TODO.txt
+++ b/TODO.txt
@@ -57,6 +57,7 @@ https://github.com/
 --------------------------------------- CODIGO ---------------------------------------------------------------------
 - CONTINUAR A PARTIR DO TESTE_FUNCS
 BUGS:
+    O StockShark contém uma lista de posições atacas pelo adversario
     Move validator validate devia tar como dantes e o check dos castles dentro do King
     Verificar o get sel move do Detector pq trocou a ordem do start e end tile
     Meter para começar um jogo a meio utilizando o gen_fen_string da board_img
